fix(hyprland): New "amazing" windowrules............

--- a/hyprland/.config/hypr/conf/windows_and_worspaces.conf
+++ b/hyprland/.config/hypr/conf/windows_and_worspaces.conf
@@ -5,45 +5,106 @@
 # See https://wiki.hyprland.org/Configuring/Window-Rules/ for more
 # See https://wiki.hyprland.org/Configuring/Workspace-Rules/ for workspace rules
 
-# Example windowrule
-# windowrule = float,class:^(kitty)$,title:^(kitty)$
+##############################
+### WINDOWS AND WORKSPACES ###
+##############################
 
-# Ignore maximize requests from apps. You'll probably like this.
-windowrule = suppressevent maximize, class:.*
+# Ignore maximize requests from apps
+windowrule {
+    name = Suppress Maximize All
+    match:class = .*
+    suppress_event = maximize
+}
 
 # Fix some dragging issues with XWayland
-windowrule = nofocus,class:^$,title:^$,xwayland:1,floating:1,fullscreen:0,pinned:0
+windowrule {
+    name = XWayland Drag Fix
+    match:class = ""
+    match:xwayland = true
+    float = on
+    no_focus = on
+    fullscreen = off
+    pin = off
+}
 
 # Floating apps
-windowrule = float, class:vlc
-windowrule = float, class:waypaper
-windowrule = float, class:blueman-manager
-windowrule = size 500px 75%, class:blueman-manager
-windowrule = move 70% 10%, class:blueman-manager
+windowrule {
+    name = Float VLC
+    match:class = vlc
+    float = on
+}
 
-windowrule = float, class:org.pulseaudio.pavucontrol
-windowrule = size 500px 75%, class:org.pulseaudio.pavucontrol
-windowrule = move 70% 10%, class:org.pulseaudio.pavucontrol
+windowrule {
+    name = Float Waypaper
+    match:class = waypaper
+    float = on
+}
 
-# Floating apps
+windowrule {
+    name = Float Blueman
+    match:class = blueman-manager
+    float = on
+    size = 500px 75%
+    move = 70% 10%
+}
 
-windowrule = float, class:Informative
-windowrule = size 75% 90%%, class:Informative
-windowrule = bordersize 2, class:Informative
+windowrule {
+    name = Float Pavucontrol
+    match:class = org.pulseaudio.pavucontrol
+    float = on
+    move = 70% 10%
+}
 
-windowrulev2 = tile, class:^Brave-browser$
+windowrule {
+    name = Float Informative
+    match:class = Informative
+    float = on
+    size = 75% 90%
+    border_size = 2
+}
 
-# No animations for `rofi`
-layerrule = noanim, rofi
+# Browser tiling
+windowrule {
+    name = Tile Brave
+    match:class = Brave-browser
+    tile = on
+}
 
-# show hyprbars only on floating
-windowrulev2 = plugin:hyprbars:nobar, floating:0
+# No animations for rofi
+windowrule {
+    name = Rofi No Anim
+    match:class = rofi
+    no_anim = on
+}
 
-# Smart gaps and borders (no borders when only 1 window open)
+# @TODO: https://github.com/hyprwm/hyprland-plugins/issues/580
+# # Show hyprbars only on floating
+# windowrule {
+#     name = Hyprbars Hide On Tiled
+#     match:float = false
+#     # effect assume plugin:hyprbars:nobar is valid; if not use plugin syntax
+#     # some configs attach different bar behavior
+#     plugin:hyprbars = nobar
+#
+# }
+
+# Define workspace behavior
 workspace = w[tv1], gapsout:0, gapsin:0
 workspace = f[1], gapsout:0, gapsin:0
-windowrulev2 = bordersize 0, floating:0, onworkspace:w[tv1]
-windowrulev2 = rounding 0, floating:0, onworkspace:w[tv1]
-windowrulev2 = bordersize 0, floating:0, onworkspace:f[1]
-windowrulev2 = rounding 0, floating:0, onworkspace:f[1]
 
+# Window rules to remove borders & rounding on these workspaces
+windowrule {
+    name = No Borders on tv1
+    match:workspace = w[tv1]
+    match:float = 0
+    border_size = 0
+    rounding = 0
+}
+
+windowrule {
+    name = No Borders on f1
+    match:workspace = f[1]
+    match:float = 0
+    border_size = 0
+    rounding = 0
+}
