feat(tmux): Add `display-popup` shortcut <prefix>P

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -45,6 +45,7 @@ set -ag terminal-overrides ",xterm-256color:RGB"
 # I need these to be working outside of nvim, so add them here
 bind-key "o" neww "tmux-sessionizer 'nvim .'"
 bind-key "O" send-keys "tmux-panelizer 'nvim .'" Enter
+bind-key "P" display-popup
 
 bind-key -r m resize-pane -Z                                        # Maximize And Minimize Panes
 set-option -g repeat-time 0                                         # Repeat time where we can chain commands... I don't like this outside of mass resizing...
