fix(hyprbars): Show on float

--- a/hyprland/.config/hypr/conf/windows_and_worspaces.conf
+++ b/hyprland/.config/hypr/conf/windows_and_worspaces.conf
@@ -77,16 +77,7 @@ windowrule {
     no_anim = on
 }
 
-# @TODO: https://github.com/hyprwm/hyprland-plugins/issues/580
-# # Show hyprbars only on floating
-# windowrule {
-#     name = Hyprbars Hide On Tiled
-#     match:float = false
-#     # effect assume plugin:hyprbars:nobar is valid; if not use plugin syntax
-#     # some configs attach different bar behavior
-#     plugin:hyprbars = nobar
-#
-# }
+windowrule = hyprbars:no_bar on, match:float = false
 
 # Define workspace behavior
 workspace = w[tv1], gapsout:0, gapsin:0
