--- a/waypaper/.config/waypaper/config.ini
+++ b/waypaper/.config/waypaper/config.ini
@@ -2,10 +2,10 @@
 language = en
 folder = ~/Wallpapers/wallpapers
 monitors = All
-wallpaper = ~/Wallpapers/wallpapers/wp4473721-5120x1440-wallpapers.png
+wallpaper = ~/Wallpapers/wallpapers/satoru-gojo-3840x2160-15227.png
 show_path_in_tooltip = True
-backend = swww
-fill = stretch
+backend = mpvpaper
+fill = fill
 sort = name
 color = #ffffff
 subfolders = True
@@ -22,6 +22,6 @@ swww_transition_fps = 60
 mpvpaper_sound = False
 mpvpaper_options = 
 use_xdg_state = False
-zen_mode = True
+zen_mode = False
 stylesheet = ~/.config/waypaper/style.css
 
