--- a/waypaper/.config/waypaper/config.ini
+++ b/waypaper/.config/waypaper/config.ini
@@ -2,10 +2,10 @@
 language = en
 folder = ~/Wallpapers/wallpapers
 monitors = All
-wallpaper = ~/Wallpapers/wallpapers/satoru-gojo-3840x2160-15227.png
+wallpaper = ~/Wallpapers/wallpapers/aishot-3219.jpg
 show_path_in_tooltip = True
-backend = mpvpaper
-fill = fill
+backend = swww
+fill = stretch
 sort = name
 color = #ffffff
 subfolders = True
