--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -23,8 +23,7 @@ run ~/.tmux/plugins/tmux/catppuccin.tmux
 set -g status-right-length 100
 set -g status-left-length 100
 set -g status-left ""
-set -g status-right "#{E:@catppuccin_status_application}"
-set -ag status-right "#{E:@catppuccin_status_session}"
+set -g status-right ""
 set -agF status-right "#{E:@catppuccin_status_battery}"
 set -agF status-right "#{E:@catppuccin_status_cpu}"
 
